                          - some tweaking to reduce load
sub-community /bmxd       - add community default route for gateway that ensure routing to other
                            sub-communities. This will be used when a communtity is split up into
                            sub-communities.
                          - add network id
sysinfo                   - add wg_pubkey and roaming flag

build-system              - fix some configuration dependencies
                          - add default openwrt config as basis for creating new config files
                          - some other build script improvments
                          - support to build images via docker


2021-05-2 7.0.3 (release)
--------------------------------------------------
bmxd                      - improvments to bmxd watchdog
gui                       - minor text corrections
ssh                       - add ssh-key (authorized_keys) support
led                       - improve LED detection

2021-04-00 7.0.2
--------------------------------------------------
bmxd                      - add keep alive watchdog
backbone                  - re-add wireguard interfaces to bmxd when bmxd has restarted
firewall                  - enable lan gateway when router acts as public gateway

2021-02-13 7.0.1 (rc)
--------------------------------------------------
wifi                      - disable external wifi button
                          - fix wifi ssid
certificates              - replace let's encrypt certificates with own to avoid
                            nodes registration and firmware download problems in future
network                   - rework network interface naming
network-gui               - colorize interface names in node lists
gui                       - improve wifi hotspot list
sysinfo                   - new version for sysinfo.json
openwrt                   - update to last openwrt release (19.07.05)
statistic                 - internal minor fixes